<resources>
    <string name="app_name">Shopshop Shopping List</string>
    <string name="app_name_short">Shopshop</string>

    <string name="firebase_notification_channel" translatable="false">FIREBASE_NOTIFICATION_CHANNEL</string>

    <!-- Generics -->
    <string name="empty" />
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ellipsis">…</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="share">Share</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_try_again">Something went wrong. Please try again.</string>
    <string name="splash_generic_error">An unexpected error has occurred. Please try again.</string>

    <!-- Onboarding Activity -->
    <string name="get_started">Get Started</string>
    <string name="onboarding_title_one">Simple and straightforward</string>
    <string name="onboarding_title_two">Easy to use</string>
    <string name="onboarding_title_three">Multiple lists</string>
    <string name="onboarding_description_one">No fuss, no complex shenanigans, just a simple shopping list to allow you to focus better on your shopping</string>
    <string name="onboarding_description_two">Add items to your list and check them as you grab them from the shelves</string>
    <string name="onboarding_description_three">You can also have more than one list for different shopping trips</string>

    <!-- Home Fragment -->
    <string name="splash_home_no_items">You have no shopping lists. Click on the button to add one.</string>
    <string name="splash_home_no_search_results">No shopping lists or items found with search term %1$s</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="settings">Settings</string>
    <string name="no_items">No items</string>
    <string name="home_search_bar_hint">Search your lists</string>
    <string name="shopping_lists">Shopping lists</string>
    <string name="preview_checked">\u2713&#160;</string>

    <!-- List Fragment -->
    <string name="new_list">New List</string>
    <string name="delete_list">Delete list</string>
    <string name="new_item">New item</string>
    <string name="UNKNOWN_LIST">UNKNOWN LIST</string>
    <string name="splash_list_no_items">You have no items. Add one using the text field above</string>
    <string name="list_not_found">List couldn\'t be found. Going back</string>
    <string name="clear_checked">Clear checked</string>
    <string name="clear_all">Clear all</string>
    <string name="toast_list_saved">%s saved</string>
    <string name="unnamed_list">Unnamed List</string>
    <string name="item_already_in_list">%1$s is already in %2$s</string>
    <string name="zero">0</string>
    <string name="deleted_item">Deleted %1$s</string>
    <string name="empty_item_name_entered">Please enter a valid item name</string>
    <string name="empty_list_deleted_toast">Empty list deleted</string>

    <!-- Upsell Activity -->
    <string name="upsell_title">Shopshop Premium</string>
    <string name="upsell_description">Get the most premium Shopshop experience</string>
    <string name="upsell_cta">Go Premium</string>
    <string name="upsell_cta_pending">Purchase Pending</string>
    <string name="upsell_image_box_one_title">Completely Ad-Free</string>
    <string name="upsell_image_box_one_description">Get rid of ads for a completely seamless shopping experience</string>
    <string name="upsell_image_box_two_title">Pick your own theme</string>
    <string name="upsell_image_box_two_description">Pick from a list of theme colors to make your shopping list feel like your own</string>
    <string name="upsell_image_box_three_title">Only %s</string>
    <string name="upsell_image_box_three_description">Pay once and enjoy a premium shopping list forever!</string>

    <!-- Purchase Result Dialogs -->
    <string name="purchase_dialog_connection_failed_title">Error</string>
    <string name="purchase_dialog_connection_failed_message">Please check that your device is logged into the Google Play Store</string>
    <string name="purchase_dialog_already_owned_message">You already own premium</string>
    <string name="purchase_dialog_unavailable_message">Shopshop Premium seems to be unavailable. Try updating to the latest version or contacting the developer</string>
    <string name="purchase_dialog_unknown_message">An error occurred while purchasing premium. Please try again</string>
    <string name="purchase_dialog_purchased_title">Premium Unlocked</string>
    <string name="purchase_dialog_purchased_message">You can now enjoy an ad-free experience</string>
    <string name="purchase_dialog_pending_title">Purchase Pending</string>
    <string name="purchase_dialog_pending_message">Your purchase is still being confirmed by Google Play. As soon as it\'s confirmed, you will start enjoying an ad-free experience</string>

    <!-- Rename Dialog -->
    <string name="rename">Rename</string>
    <string name="set">Set</string>
    <string name="header_new_list">New List</string>
    <string name="hint_list_title">List title</string>

    <!-- Delete Dialog -->
    <string name="delete">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete %s?</string>

    <!-- Clear All Dialog -->
    <string name="clear_all_dialog_message">Are you sure you want to clear all items from %1$s?</string>

    <!-- Theme Dialog -->
    <string name="select">Select</string>
    <string name="theme_dialog_title">Theme</string>
    <string name="use_system_dynamic_colors">Use system dynamic colors</string>
    <string name="theme_dialog_premium_notice">Themes will be a premium feature in the official release of the app</string>
    
    <!-- Settings -->
    <string name="checkbox_style_dialog_title">Checkbox style</string>
    <string name="checkbox_style_key">CHECKBOXSTYLE</string>
    <string-array name="checkbox_style_entries">
        <item>Square</item>
        <item>Circular</item>
    </string-array>

    <string-array name="checkbox_style_values">
        <item>@string/checkbox_style_value_square</item>
        <item>@string/checkbox_style_value_circular</item>
    </string-array>

    <string name="checkbox_style_value_square">square</string>
    <string name="checkbox_style_value_circular">circular</string>
</resources>
