<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvvm.activity.upsell.UpsellActivity">

  <data>
    <import type="com.ericthecoder.shopshopshoppinglist.entities.premium.PremiumStatus" />
    <import type="android.view.View" />

    <variable
        name="viewmodel"
        type="com.ericthecoder.shopshopshoppinglist.mvvm.activity.upsell.UpsellViewModel" />
  </data>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor">

      <com.google.android.material.appbar.MaterialToolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:gravity="center_horizontal"
          app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/toolbar_back_button_size"
            android:layout_height="@dimen/toolbar_back_button_size"
            android:src="@drawable/ic_arrow_back"
            android:background="@drawable/bg_ripple_gray_round"
            android:padding="4dp"
            android:onClick="@{() -> viewmodel.onBackButtonPressed()}"
            android:contentDescription="@string/talkback_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

      </com.google.android.material.appbar.MaterialToolbar>

      <TextView
          android:id="@+id/upsell_title"
          android:textAppearance="@style/TextAppearance.App.HeadlineLarge"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:text="@string/upsell_title"
          android:layout_marginTop="48dp"
          app:layout_constraintTop_toBottomOf="@id/toolbar"
          />

      <TextView
          android:id="@+id/upsell_price"
          android:textAppearance="@style/TextAppearance.App.HeadlineMedium"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:text="@{viewmodel.premiumPrice}"
          app:layout_constraintTop_toBottomOf="@id/upsell_title"
          tools:text="£0.99"
          />

      <TextView
          android:id="@+id/upsell_description"
          android:textAppearance="@style/TextAppearance.App.TitleMedium"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/upsell_description"
          android:gravity="center_horizontal"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:layout_constraintTop_toBottomOf="@id/upsell_price"
          />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/upsell_button_upper"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:backgroundTint="@{viewmodel.premiumStatus != PremiumStatus.PENDING ? @color/colorPrimaryButton : @color/colorDisabled}"
          android:text="@{viewmodel.premiumStatus == PremiumStatus.PENDING ? @string/upsell_cta_pending : @string/upsell_cta}"
          android:onClick="@{() -> viewmodel.onCtaButtonPressed()}"
          app:layout_constraintTop_toBottomOf="@id/upsell_description"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="@string/upsell_cta"
          />

      <ImageView
          android:id="@+id/image_box_one"
          android:layout_width="match_parent"
          android:layout_height="250dp"
          android:importantForAccessibility="no"
          android:src="@drawable/onboardbg3"
          android:alpha="0.5"
          android:scaleType="centerCrop"
          android:layout_marginTop="32dp"
          app:layout_constraintTop_toBottomOf="@id/upsell_button_upper"
          />

      <View
          android:id="@+id/color_scrim_one"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:background="@drawable/dark_green_vertical_fade"
          app:layout_constraintTop_toTopOf="@id/image_box_one"
          app:layout_constraintBottom_toBottomOf="@id/image_box_one"
          />

      <View
          android:id="@+id/image_box_one_textbox"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:background="?attr/colorPrimaryVariant"
          app:layout_constraintTop_toTopOf="@id/image_box_one_title"
          app:layout_constraintBottom_toBottomOf="@id/image_box_one_description"
          />

      <TextView
          android:id="@+id/image_box_one_title"
          android:textAppearance="@style/TextAppearance.App.HeadlineMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/upsell_image_box_one_title"
          android:paddingTop="16dp"
          android:textColor="?attr/colorOnPrimary"
          app:layout_constraintTop_toBottomOf="@id/image_box_one"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />

      <TextView
          android:id="@+id/image_box_one_description"
          android:textAppearance="@style/TextAppearance.App.BodyLarge"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="?attr/colorOnPrimary"
          android:text="@string/upsell_image_box_one_description"
          android:gravity="center_horizontal"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:paddingBottom="48dp"
          app:layout_constraintTop_toBottomOf="@id/image_box_one_title"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />

      <ImageView
          android:id="@+id/image_box_two"
          android:layout_width="match_parent"
          android:layout_height="250dp"
          android:importantForAccessibility="no"
          android:src="@drawable/onboardbg1"
          android:alpha="0.5"
          android:scaleType="centerCrop"
          app:layout_constraintTop_toBottomOf="@id/image_box_one_textbox"
          />

      <View
          android:id="@+id/color_scrim_two"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:background="@drawable/dark_green_vertical_fade"
          app:layout_constraintTop_toTopOf="@id/image_box_two"
          app:layout_constraintBottom_toBottomOf="@id/image_box_two"
          />

      <View
          android:id="@+id/image_box_two_textbox"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:background="?attr/colorPrimaryVariant"
          app:layout_constraintTop_toTopOf="@id/image_box_two_title"
          app:layout_constraintBottom_toBottomOf="@id/image_box_two_bottom_space"
          />

      <TextView
          android:id="@+id/image_box_two_title"
          android:textAppearance="@style/TextAppearance.App.HeadlineMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{String.format(@string/upsell_image_box_two_title, viewmodel.premiumPrice)}"
          android:paddingTop="16dp"
          android:textColor="?attr/colorOnPrimary"
          app:layout_constraintTop_toBottomOf="@id/image_box_two"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="Only £0.99"
          />

      <TextView
          android:id="@+id/image_box_two_description"
          android:textAppearance="@style/TextAppearance.App.BodyLarge"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/upsell_image_box_two_description"
          android:gravity="center_horizontal"
          android:textColor="?attr/colorOnPrimary"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:paddingBottom="16dp"
          app:layout_constraintTop_toBottomOf="@id/image_box_two_title"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/upsell_button_lower"
          style="@style/Widget.App.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:layout_marginBottom="32dp"
          android:text="@{viewmodel.premiumStatus == PremiumStatus.PENDING ? @string/upsell_cta_pending : @string/upsell_cta}"
          android:onClick="@{() -> viewmodel.onCtaButtonPressed()}"
          app:layout_constraintTop_toBottomOf="@id/image_box_two_description"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="@string/upsell_cta"
          />

      <Space
          android:id="@+id/image_box_two_bottom_space"
          android:layout_width="match_parent"
          android:layout_height="64dp"
          app:layout_constraintTop_toBottomOf="@id/upsell_button_lower"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

</layout>

